Gzip compression - refactored entire code to store body in byte array